# Web_GroupProject

./: .gitignore  README.md  WeightTrack.html  app.py  create_tables.py  pyproject.toml  requirements.txt
app/: __init__.py  account.py  analytics.py  db.py  forms.py  leaderboard.py  profile.py  user.py  util.py  weight.py  weightchart.py  workout.py
app/static/css/: style.css
app/static/js/: util.js
app/templates/: analytics.html  base.html  friends.html  index.html  leaderboard.html  login.html  messages.html  profile.html  register.html  weight.html  weightchart.html  workout.html  workout_feed.html  workout_shared.html
migrations/versions/: 0063773662dd_recover_some_delete_fields.py  10a920caf435_modify_share_workout_model.py  82d0338a8407_delete_unused_message_fields.py  bf609f51f2df_remove_field_in_friendship_model.py
templates/: base.html
tests/selenium/: test_add_activities.py  test_add_weight.py  test_login.py  test_register_login.py  test_view_leaderboard.py
tests/unit/: config.py  database.db  test_app.py  test_model.py  test_route.py  test_user.py
