[project]
name = "app"
version = "1.0.0"
description = "Fitness and weight tracker."
requires-python = ">= 3.8"
dependencies = [
    "flask",
    "flask-sqlalchemy"
]

[tool.setuptools]
packages = ["app"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnreachable = false
reportUnusedFunction = false